last 修正 before 納品

--- a/src/pages/hiring-retention/index.astro
+++ b/src/pages/hiring-retention/index.astro
@@ -45,7 +45,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
                 ●多様な人財確保にむけて、社員の人的ネットワークや採用イベント等を活用したリファラル採用を強化します。
               </li>
               <li>
-                ●新たな価値創造にむけ、社外経験・スキルを還元することで退職者社員を対象とするアルムナイ採用を強化します。
+                ●キャリアの選択肢が広がる中で、社外での経験・スキルを身に着けた元社員が、当社で再挑戦するアルムナイ採用を強化します。
               </li>
             </ul>
           </div>
@@ -56,7 +56,8 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
             </h3>
             <ul class="details__text-list">
               <li>
-                ●専門性の高い、I T、デジタル、資産運用、グローバル人財等の採用にむけて、産学連携先とのつながりを強化します。
+                ●専門性の高い、I
+                T、デジタル、資産運用、グローバル人財等の採用にむけて、産学連携先とのつながりを強化します。
               </li>
             </ul>
           </div>
@@ -75,18 +76,20 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <div class="details__numbers-list">
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>30<span>名</span></p>
-            <p class="details__numbers-item-subject">
-              の専門性の高い人財を採用
-            </p>
+            <p class="details__numbers-item-subject">の自社ネットワーク採用<sup>※1</sup></p>
           </div>
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>30<span>名</span></p>
-            <p class="details__numbers-item-subject">
-              の自社ネットワーク採用
-            </p>
+            <p class="details__numbers-item-subject">の専門性の高い人財を採用<sup>※2</sup></p>
           </div>
         </div>
       </div>
+      <p class="details__numbers-small">
+        <small
+          >※リファラル・アルムナイ採用等による入社者（2025年度末累計）<br />
+          ※新卒専門コース等の入社者（2025年度末累計</small
+        >
+      </p>
     </div>
   </section>
 </Layout>
