--- a/src/pages/workstylereform/index.astro
+++ b/src/pages/workstylereform/index.astro
@@ -59,10 +59,12 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
               </li>
               <ul class="details__text-whiteList">
                 <li>
-                  - 全社での業務削減の取組み、生産性向上に向けたデジタル化の推進や、旧来の商慣習・業務の仕方の見直し等を進め、長時間労働からの脱却を目指します。
+                  -
+                  全社での業務削減の取組み、生産性向上に向けたデジタル化の推進や、旧来の商慣習・業務の仕方の見直し等を進め、長時間労働からの脱却を目指します。
                 </li>
                 <li>
-                  - 「年次有給休暇の計画的付与制度」を活用し、計画対象日数以上の有給休暇を全社員が100%取得することを目指し、ライン長が率先して休暇を取得するなど、休みやすい環境づくりを推進します。
+                  -
+                  「年次有給休暇の計画的付与制度」を活用し、計画対象日数以上の有給休暇を全社員が100%取得することを目指し、ライン長が率先して休暇を取得するなど、休みやすい環境づくりを推進します。
                 </li>
               </ul>
               <li>
@@ -98,10 +100,13 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
           </div>
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>
-              20<span>時間以内<small>(月平均)</small></span>
+              5<span
+                >％削減
+                <!-- <small>(月平均)</small> -->
+              </span>
             </p>
             <p class="details__numbers-item-subject">
-              所定外労働時間<small>（全社員平均）</small>
+              総労働時間<small>（2023年度比）</small>
             </p>
           </div>
         </div>
