--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -44,6 +44,6 @@ const homeUrl = import.meta.env.BASE_URL
     <a href={`${homeUrl}interview/`} class="navigation-link">社員紹介</a>
   </li>
   <li class="navigation-item">
-    <a href={`${homeUrl}message/`} class="navigation-link">トップメッセージ</a>
+    <a href={`${homeUrl}message/`} class="navigation-link">当社が取り組む理由</a>
   </li>
 </ul>
