--- a/src/styles/sections/areas/_introduction.scss
+++ b/src/styles/sections/areas/_introduction.scss
@@ -26,6 +26,9 @@
     font-weight: 400;
     line-height: 3.8rem; /* 237.5% */
     margin-top: 1.8rem;
+    @include pc {
+      white-space: pre-line;
+    }
     @include sp {
       font-size: 1.4rem;
       line-height: 2.8rem; /* 200% */
