--- a/src/styles/sections/home/_mission.scss
+++ b/src/styles/sections/home/_mission.scss
@@ -64,4 +64,19 @@
       letter-spacing: 0.016rem;
     }
   }
+  &__banner {
+    width: 40rem;
+    filter: drop-shadow(0px 0px 3rem rgba(0, 108, 96, 0.2));
+    margin-top: 8.5rem;
+    transition: opacity ease-in-out 0.3s;
+    @include pc {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    @include sp {
+      margin-top: 3.6rem;
+      width: 100%;
+    }
+  }
 }
