change some images and text, added GTM

--- a/src/sections/home/Mv.astro
+++ b/src/sections/home/Mv.astro
@@ -40,7 +40,7 @@ const homeUrl = import.meta.env.BASE_URL
       <span class="mv__title__text-ja text-fadeIn">
         私<i>が</i><i>、</i>つくる<i>。</i>新たなミライ。
       </span>
-      <span class="mv__title__text-sub text-fadeIn">ー人的資本経営への取り組みー</span>
+      <span class="mv__title__text-sub text-fadeIn">ー人的資本経営への取組みー</span>
     </h1>
   </div>
 </section>
